--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -26,15 +26,15 @@ Vagrant.configure("2") do |config|
   # Shared folder: Sync folders between host and guest
   # Host path "../data" is mapped to "/vagrant_data" on the guest
   # config.vm.synced_folder "../data", "/vagrant_data"
-
+  config.vm.hostname = "vm1"	
   # VirtualBox-specific configuration
   config.vm.provider "virtualbox" do |vb|
     # Disable GUI
     vb.gui = false
-
     # Set memory and CPU for the VM
     vb.memory = "2048"
     vb.cpus = 2
+    vb.name = "kasra_2"
 
     # Optional: Enable VirtualBox logs for debugging
     # vb.customize ["modifyvm", :id, "--log", "on"]
