finished nginx, heading traefik

--- a/automation/basic_iptables/setup_iptables.yml
+++ b/automation/basic_iptables/setup_iptables.yml
@@ -5,3 +5,4 @@
   name: setup some iptables on servers
   roles:
     - { role: iptables, become: true, tags: setup_iptables }
+# TODO: FINISH THIS!
