traefik a bit, heading gitlab

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ LPIC/useful_bash/backup/
 .vagrant
 automation/Meijer B. Ansible. Up and Running...3ed 2022.pdf
 .vscode
+bash_scripting/log
+bash_scripting/test
