--- a/automation/production/ansible.cfg
+++ b/automation/production/ansible.cfg
@@ -4,5 +4,9 @@ connection = smart
 timeout = 60
 deprecation_warnings = False
 host_key_checking = False
-pipelining=True
-forks=100
+pipelining = True
+forks = 100
+gathering = smart
+fact_caching = jsonfile
+# two hours timeout for caching
+fact_caching_timeout = 7200 
