--- a/automation/production/preparing.yml
+++ b/automation/production/preparing.yml
@@ -4,5 +4,5 @@
   gather_facts: yes
   name: install and configure servers
   roles:
-    - { role: preparing_server, become: True, tags: preparing_server }
+    # - { role: preparing_server, become: True, tags: preparing_server }
     - { role: docker, become: True, tags: docker_setup }
