--- a/automation/production/ansible.cfg
+++ b/automation/production/ansible.cfg
@@ -7,6 +7,6 @@ host_key_checking = False
 pipelining = True
 forks = 100
 gathering = smart
-fact_caching = jsonfile
-# two hours timeout for caching
-fact_caching_timeout = 7200 
+# fact_caching = jsonfile
+# # two hours timeout for caching
+# fact_caching_timeout = 7200 
