--- a/automation/production/inventory/host.yml
+++ b/automation/production/inventory/host.yml
@@ -4,3 +4,14 @@ server1 ansible_host=192.168.10.100 ansible_user=vagrant ansible_port=22
 [workers]
 server2 ansible_host=192.168.10.2 ansible_user=vagrant ansible_port=22
 server3 ansible_host=192.168.10.3 ansible_user=vagrant ansible_port=22
+
+
+# OTHER WAY TO DESIGN
+# all:
+#   children:
+#     tools-server:
+#       hosts:
+#         tools-server:
+#           ansible_host:
+#           ansible_user:
+#           ansible_port
