--- a/observability/ELK-stack/production/single-node/fleet/.env
+++ b/observability/ELK-stack/production/single-node/fleet/.env
@@ -1,5 +1,5 @@
 # domain name information
-DOMAIN_NAME=observability.mecan.ir
+DOMAIN_NAME=observability.tamam.ir
 ELASTICSEARCH_SUB_DOMAIN=es
 KIBANA_SUB_DOMAIN=kibana
 FLEET_SUB_DOMAIN=fleet
