--- a/observability/ELK-stack/production/single-node/traefik/.env
+++ b/observability/ELK-stack/production/single-node/traefik/.env
@@ -1,17 +1,17 @@
 # Domain address
-DOMAIN_ADDRESS=elk-server.mecan.ir
+DOMAIN_ADDRESS=elk-server.tamam.ir
 TRA_SUB=web
 
 # ACME variables
-ACME_EMAIL=cert@mecan.ir
+ACME_EMAIL=cert@tamam.ir
 
 # set restart policy
 RESTART_POLICY=on-failure
 
 #  web auth information.
 #  how to generate password:
-#  echo UNojpA3tXsYiH9gzZcCCCaEVhfL3gw | htpasswd -s -n -i MeCan
-WEB_AUTH_USER=MeCan
+#  echo UNojpA3tXsYiH9gzZcCCCaEVhfL3gw | htpasswd -s -n -i tamam
+WEB_AUTH_USER=tamam
 WEB_AUTH_PASS="{SHA}CoRQvjVmLEf/Boi7dqaR84EijYo="
 
 # Hostname
