--- a/observability/mimir-stack/grafana/dashboards/dashboard.yml
+++ b/observability/mimir-stack/grafana/dashboards/dashboard.yml
@@ -3,7 +3,7 @@ apiVersion: 1
 providers:
   - name: "dashboards"
     orgId: 1
-    folder: 'MeCan_Services'
+    folder: 'tamam_Services'
     type: file
     disableDeletion: false
     editable: true
