--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,4 @@ automation/Meijer B. Ansible. Up and Running...3ed 2022.pdf
 bash_scripting/log
 bash_scripting/test
 ./interview.md
-gitlab/kaniko-pipeline/doc
+# gitlab/kaniko-pipeline/doc
